tests/derive_ui/skip_without_default.stderr
error[E0277]: the trait bound `Kind: Default` is not satisfied
  --> tests/derive_ui/skip_without_default.rs:22:11
   |
22 |     #[arg(skip)]
   |           ^^^^ the trait `Default` is not implemented for `Kind`
